prow/cluster/components/ing_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ing
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: status.build.kyma-project.io
    http:
      paths:
      - path: /*
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /hook
        backend:
          service:
            name: hook
            port:
              number: 8888
      - path: /metrics
        backend:
          service:
            name: pushgateway-external
            port:
              number: 80
